<resources>
    <string name="app_name">Bmi</string>
    <string name="help">HELP</string>
    <string name="bmi_info">Body mass index (BMI) is a value derived from the mass (weight) and height of a person.</string>
    <string name="ok">OK</string>
    <string name="ur_bmi_is">\"Your BMI is \"</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="cal_bmi">calculate BMI</string>
    <string name="ur_bmi_result">your bmi here</string>

</resources>